<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Numenta Platform for Intelligent Computing (NuPIC)
  ~ Copyright (C) 2015, Numenta, Inc.  Unless you have purchased from
  ~ Numenta, Inc. a separate commercial license for this software code, the
  ~ following terms and conditions apply:
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 3 as
  ~ published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses.
  ~
  ~ http://numenta.org/licenses/
  ~
  -->

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioSortBar"
    android:checkedButton="@+id/radioSortByAnomalies"
    style="@style/SortBar" >

    <TextView
        android:id="@+id/sortTitleText"
        style="@style/SortTitle"
        android:text="@string/sort_title" />

    <RadioButton
        android:id="@+id/sortByAnomalies"
        android:checked="true"
        style="@style/SortButton"
        android:text="@string/sort_anomalies" />

    <RadioButton
        android:id="@+id/sortByName"
        style="@style/SortButton"
        android:text="@string/sort_name" />

</RadioGroup>