<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Numenta Platform for Intelligent Computing (NuPIC)
  ~ Copyright (C) 2015, Numenta, Inc.  Unless you have purchased from
  ~ Numenta, Inc. a separate commercial license for this software code, the
  ~ following terms and conditions apply:
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 3 as
  ~ published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see http://www.gnu.org/licenses.
  ~
  ~ http://numenta.org/licenses/
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/notification_listing"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <!-- Content -->

    <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/no_notifications_text"
            android:id="@+id/no_notifications_text"
            android:visibility="gone"/>

    <ListView
            android:id="@+id/notification_list_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/action_dismiss_all_notifications"
                style="@android:style/Widget.Button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/action_dismiss_all_notifications"/>

        <Button
                android:id="@+id/action_close_notifications"
                style="@android:style/Widget.Button"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/action_close_notifications"/>


    </LinearLayout>


</LinearLayout>


